# python-evolution-api

./: .gitlab-ci.yml  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-issue.md  2-bug-report.md  3-feature-request.md  4-documentation.md  5-question.md  config.yml
.github/workflows/: python-publish.yml  pythonpackage.yml
docs/: index.md
evolutionapi/: __init__.py  client.py  const.py  exceptions.py  schemas.py
evolutionapi/resources/: instances.py
python_evolution_api/: __init__.py  evolution_api.py
tests/: conftest.py  test_client.py  test_const.py  test_evolution_api.py  test_version.py
tests/resources/: test_instances.py
